CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT (PSF-LoginServer-Launcher)

INCLUDE(CheckTypeSize)
CHECK_TYPE_SIZE("void*" SIZEOF_VOID_P BUILTIN_TYPES_ONLY)
IF (SIZEOF_VOID_P EQUAL 8)
  SET(PSFLSL_ARCH_BITNESS 64)
ELSE ()
  SET(PSFLSL_ARCH_BITNESS 32)
ENDIF ()

FIND_PATH(PSFLSL_JNI_HEADER_INCLUDE_DIR
  NAMES jni.h
  DOC "Directory where jni.h is located (Will be put on include path)"
)
IF (NOT PSFLSL_JNI_HEADER_INCLUDE_DIR)
  MESSAGE(SEND_ERROR "jni.h not found")
ENDIF ()

SET(PSFLSL_HEADERS
  include/psflsl/misc.h
  include/psflsl/runner.h
  include/psflsl/registry.h
)

SET(PSFLSL_HARDCODED_JVMDLL_FILEPATH "" CACHE FILEPATH "FIXME:")
SET(PSFLSL_HARDCODED_CLASS_PATH "" CACHE PATH "FIXME:")

SET(PSFLSL_SOURCES
  src/misc.cpp
  src/runner.cpp
  src/registry.cpp
  src/main.cpp
)

ADD_EXECUTABLE(PSF-LoginServer-Launcher
  ${PSFLSL_HEADERS}
  ${PSFLSL_SOURCES}
)

TARGET_COMPILE_DEFINITIONS(PSF-LoginServer-Launcher
  PRIVATE "-DEXTERNAL_PSFLSL_HARDCODED_JVMDLL_FILEPATH=\"${PSFLSL_HARDCODED_JVMDLL_FILEPATH}\""
  PRIVATE "-DEXTERNAL_PSFLSL_HARDCODED_CLASS_PATH=\"${PSFLSL_HARDCODED_CLASS_PATH}\""
  PRIVATE "-DEXTERNAL_PSFLSL_ARCH_BITNESS=${PSFLSL_ARCH_BITNESS}"
)
  
TARGET_INCLUDE_DIRECTORIES(PSF-LoginServer-Launcher
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include"
  PRIVATE "${PSFLSL_JNI_HEADER_INCLUDE_DIR}"
  PRIVATE "${PSFLSL_JNI_HEADER_INCLUDE_DIR}/win32" # FIXME:
)

SET_TARGET_PROPERTIES(PSF-LoginServer-Launcher
  PROPERTIES
  OUTPUT_NAME "PSF-LoginServer-Launcher_x${PSFLSL_ARCH_BITNESS}"
)

INSTALL(TARGETS PSF-LoginServer-Launcher
  LIBRARY DESTINATION "lib"
  RUNTIME DESTINATION "bin"
  ARCHIVE DESTINATION "lib"
)

INSTALL(FILES "data/PSF-LoginServer-Launcher-Config.txt"
    DESTINATION "bin"
)

# Visual Studio CMake generator specific stuff
IF (MSVC)
    ## categorize files in project tab
    SOURCE_GROUP("Header Files" FILES ${PSFLSL_HEADERS})
    SOURCE_GROUP("Source Files" FILES ${PSFLSL_SOURCES})
    ## copy pdb debug files alongside executable when installing
    INSTALL(FILES
      "$<TARGET_PDB_FILE:PSF-LoginServer-Launcher>"
      DESTINATION "bin"
    )
ENDIF ()
